--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ MAIL_FROM=tech@natterbase.com
 MAIL_HOST=in-v3.mailjet.com
 MAIL_PORT=25
 MAIL_USERNAME=fermin.grant@ethereal.email
-MAIL_PASSWORD=46eb58d0ece23c9763ced569fb158378
+MAIL_PASSWORD=XX
 DATABASE_SERVER=mongodb://localhost:27017/notification_micro
 DATABASE_USERNAME=
 DATABASE_PASSWORD=
 WEB_URL=
-MAILJET_PUBLIC_KEY=260424e5b9dc172bb6aab1267ed0f560
-MAILJET_PRIVATE_KEY=46eb58d0ece23c9763ced569fb158378
+MAILJET_PUBLIC_KEY=XXX
+MAILJET_PRIVATE_KEY=XXX
 LOCAL_REDIRECT=
 PORT=9999
