--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "test": "is-ci \"test:coverage\" \"test:watch\"",
         "test:coverage": "jest --coverage --verbose --runInBand",
         "test:watch": "jest --watch --verbose --runInBand",
-        "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch",
+        "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand --watch  --verbose",
         "start": "node src/app.js",
         "lint": "jest --config src/tests/jest.lint.js",
         "lint:fix": "npm run lint -- --fix",
