--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,12 @@ jobs:
     steps:
       - checkout
       - run:
+          name: xyz
+          command: |
+            echo "create the artifact store here";
+            mkdir /tmp/artifacts
+            touch /tmp/artifacts/test-results.xml
+      - run:
           name: update-npm
           command: "sudo npm install -g npm@latest"
       - restore_cache: # special step to restore the dependency cache
@@ -25,10 +31,10 @@ jobs:
           command: npm test
       - run: # run coverage report
           name: code-coverage
-          command: "./node_modules/.bin/nyc report --reporter=text-lcov"
+          command: "jest --coverage"
       - store_artifacts: # special step to save test results as as artifact
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
-          path: test-results.xml
+          path: /tmp/artifacts/test-results.xml
           prefix: tests
       - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: coverage
