--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
           command: npm test
       - run: # run coverage report
           name: code-coverage
-          command: "jest --coverage"
+          command: "npm run test:coverage"
       - store_artifacts: # special step to save test results as as artifact
           # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
           path: /tmp/artifacts/test-results.xml
